--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,7 +17,9 @@ spring:
   session:
     timeout: 86400
     store-type: redis
-
+  jackson:
+    date-format: yyyy/MM/dd
+    time-zone: GMT+8
 server:
   port: 8080
   servlet:
